firefox dark mode fix

--- a/scss/blocks/input.scss
+++ b/scss/blocks/input.scss
@@ -22,6 +22,7 @@ $input-border-radius: 3px;
   min-width: fit-content;
   padding: 0;
 
+  background-color: white;
   border: 1px solid $border-color;
   border-radius: $input-border-radius;
 
