--- a/scss/blocks/select.scss
+++ b/scss/blocks/select.scss
@@ -20,6 +20,7 @@ $select-border-radius: 3px;
   min-width: fit-content;
   padding: 0;
 
+  background-color: white;
   border: 1px solid $border-color;
   border-radius: $select-border-radius;
 
